# faceworkshop

./: CMakeLists.txt  CompileAndRunDemo.md  FaceWorkshop.pro  ProjectHome.md  gui_paramdeform.cpp  gui_paramdeform.h  gui_paramdeform.ui  gui_videocapture.cpp  gui_videocapture.h  gui_videocapture.ui  imageprocess.cpp  imageprocess.h  main.cpp  myimage.cpp  myimage.h  photoview.cpp  photoview.h  pointspaint.cpp  pointspaint.h  widget_facemorph.cpp  widget_facemorph.h  widget_facemorph.ui  widget_facephotoview.cpp  widget_facephotoview.h  widget_modelparamedit.cpp  widget_modelparamedit.h  widget_modelparamedit.ui  widget_warpcontrolpaint.cpp  widget_warpcontrolpaint.h  widget_warpparam.cpp  widget_warpparam.h  widget_warpparam.ui
data/: color_asm68_ascii.model  color_asm75_ascii.model
dep/: readme.txt
old/: widget_facemorph.cpp  widget_facemorph.ui  widget_facephotoview.cpp  widget_facephotoview.h
